Based on https://github.com/sethmacleod/dimension/pull/24/files
This is needed, so that the blog menu entry, can link
to different markdown pages, without the need of them
existing in the blog menu.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,10 @@
             <nav>
               <ul>
                 {{ range .Data.Pages.ByWeight }}
-                  <li>{{ if isset .Params "link" }}<a href="{{ index .Params "link" }}"{{else}}<a href="#{{ .File.TranslationBaseName }}"{{end}}>{{ if .GetParam "menuname" }}{{ .GetParam "menuname" }}{{ else }}{{ .Title }}{{ end }}</a></li>
+                  {{ if .Param "showInMenu" }}
+                  <li>{{ if isset .Params "link" }}<a href="{{ index .Params "link" }}" {{else}}<a href="#{{ .File.TranslationBaseName }}"
+                      {{end}}>{{ if .GetParam "menuname" }}{{ .GetParam "menuname" }}{{ else }}{{ .Title }}{{ end }}</a></li>
+                  {{ end }}
                 {{ end }}
               </ul>
             </nav>
